src/parser/parser.cpp
#pragma clang diagnostic push
#pragma ide diagnostic ignored "misc-no-recursion"
#include "parser.hpp"
#include <iostream>
#include <algorithm>
#include <unordered_set>
#include "../exceptions/ParseError.hpp"
#include <SemanticAnalysis/SemanticAnalyzer.hpp>


std::string debug_lexeme_string(const std::vector<Token> &tokens) {
	std::stringstream ss;
	for (const auto &item: tokens) ss << item.lexeme << " ";
	return ss.str();
}

namespace zenith {
	// Fixed parseVarDecl to return the node
	polymorphic<VarDeclNode> Parser::parseVarDecl() {
		SourceLocation loc = currentToken.loc;
		bool isHoisted = match(TokenType::HOIST);
		VarDeclNode::Kind kind = VarDeclNode::DYNAMIC; // Default to dynamic
		polymorphic<TypeNode> typeNode;

		// Case 1: Static typed declaration (int a = 12)
		if (isBuiltInType(currentToken.type) || currentToken.type == TokenType::IDENTIFIER) {
			kind = VarDeclNode::STATIC;
			typeNode = parseType();
		}
		// Case 2: Dynamic declaration (let/var/dynamic)
		else if (match({TokenType::LET, TokenType::VAR, TokenType::DYNAMIC})) {
			kind = VarDeclNode::DYNAMIC;
			advance();
		}

		std::string name = consume(TokenType::IDENTIFIER, "Expected name").lexeme;

		// Handle array size specification (e.g., int arr[10])
		if (match(TokenType::LBRACKET)) {
			advance(); // Consume '['

			// Parse the array size expression
			auto sizeExpr = parseExpression();

			// Create a new ArrayTypeNode with the size expression
			auto arrayType = make_polymorphic<ArrayTypeNode>(
				loc,
				std::move(typeNode),
				std::move(sizeExpr)
			);
			typeNode = std::move(arrayType);

			consume(TokenType::RBRACKET, "Expected ']' after array size");
		}

		// Handle type annotation for dynamic variables (let a: int = 10)
		if (kind == VarDeclNode::DYNAMIC && match(TokenType::COLON)) {
			typeNode = parseType();
		}

		// Handle initialization
		polymorphic<ExprNode> initializer = nullptr;
		if (match(TokenType::EQUAL)) {
			consume(TokenType::EQUAL);
			initializer = parseExpression();

			// Special case: Class initialization (SomeClassName a = new SomeClassName())
			if (kind == VarDeclNode::STATIC && initializer->isConstructorCall()) {
				kind = VarDeclNode::CLASS_INIT;
			}
		}

		return make_polymorphic<VarDeclNode>(
			loc, kind, std::move(name),
			std::move(typeNode), std::move(initializer),
			isHoisted
		);
	}

	bool Parser::match(TokenType type) const {
		if (isAtEnd()) return false;
		return currentToken.type == type;
	}

	bool Parser::match(std::initializer_list<TokenType> types) const {
		if (isAtEnd()) return false;
		return std::ranges::find(types, currentToken.type) != types.end();
	}

	Token Parser::consume(TokenType type, const std::string &errorMessage) {
		if (match(type)) {
			return advance();
		}
		throw ParseError(currentToken.loc, errorMessage);
	}

	Token Parser::consume(TokenType type) {
		return consume(type, "Expected " + Lexer::tokenToString(type));
	}

	polymorphic<ExprNode> Parser::parseExpression(int precedence) {
		if (match({TokenType::PLUS_PLUS, TokenType::MINUS_MINUS})) {
			Token op = advance();
			auto right = parseExpression(getPrecedence(op.type));
			return make_polymorphic<UnaryOpNode>(
				op.loc,
				op.type,
				std::move(right),
				true
			);
		}

		auto expr = parsePrimary();

		while (true) {
			if (match({TokenType::PLUS_PLUS, TokenType::MINUS_MINUS})) {
				Token op = advance();
				return make_polymorphic<UnaryOpNode>(
					op.loc,
					op.type,
					std::move(expr),
					false
				);
			}

			Token op = currentToken;
			int opPrecedence = getPrecedence(op.type);

			if (opPrecedence <= precedence) break;

			advance();
			auto right = parseExpression(opPrecedence);
			expr = make_polymorphic<BinaryOpNode>(
				op.loc, // Pass operator location
				op.type,
				std::move(expr),
				std::move(right)
			);
		}

		return expr;
	}

	polymorphic<ExprNode> Parser::parsePrimary() {
		SourceLocation startLoc = currentToken.loc;

		if (match(TokenType::NEW)) {
			return parseNewExpression();
		}
		if (match({TokenType::NUMBER, TokenType::INTEGER_LIT, TokenType::FLOAT_LIT})) {
			Token numToken = advance();
			return make_polymorphic<LiteralNode>(startLoc, LiteralNode::NUMBER, numToken.lexeme);
		}
		if (match(TokenType::STRING_LIT)) {
			Token strToken = advance();
			return make_polymorphic<LiteralNode>(startLoc, LiteralNode::STRING, strToken.lexeme);
		}
		if (match(TokenType::TRUE) || match(TokenType::FALSE)) {
			Token boolToken = advance();
			return make_polymorphic<LiteralNode>(startLoc, LiteralNode::BOOL, boolToken.lexeme);
		}
		if (match(TokenType::NULL_LIT)) {
			advance();
			return make_polymorphic<LiteralNode>(startLoc, LiteralNode::NIL, "nil");
		}
		if (match(TokenType::LBRACE)) {
			if (isInStructInitializerContext()) {
				return parseStructInitializer();
			}
			return parseFreeObject();
		}
		if (match(TokenType::FREEOBJ)) {
			advance();
			if (match(TokenType::LBRACE)) {
				return parseFreeObject();
			}
			throw ParseError(startLoc, "Expected '{' after free obj, Achievement unlocked: How did we get here?");
		}
		if (match(TokenType::LPAREN)) {
			if (isArrowFunctionStart()) {
				auto params = parseArrowFunctionParams();
				if (match(TokenType::LAMBARROW)) {
					return parseArrowFunction(std::move(params));
				}
			}
			advance();
			auto expr = parseExpression();
			consume(TokenType::RPAREN, "Expected a ')'");
			return expr;
		}
		else if (match({TokenType::IDENTIFIER, TokenType::THIS})) {
			Token identToken = advance();
			polymorphic<ExprNode> expr;

			if (identToken.type == TokenType::THIS) {
				expr = make_polymorphic<ThisNode>(startLoc);
			}
			else {
				expr = make_polymorphic<VarNode>(startLoc, identToken.lexeme);
			}

			// Handle chained operations
			while (true) {
				if (match(TokenType::LPAREN)) {
					expr = parseFunctionCall(std::move(expr));
				}
				else if (match(TokenType::DOT)) {
					expr = parseMemberAccess(std::move(expr));
				}
				else if (match(TokenType::LBRACKET)) {
					expr = parseArrayAccess(std::move(expr));
				}
				else {
					break;
				}
			}

			return expr;
		}

		throw ParseError(currentToken.loc,
		                 "Expected primary expression, got " +
		                 Lexer::tokenToString(currentToken.type));
	}

	Token Parser::advance() {
		if (isAtEnd()) {
			return Token{
				TokenType::EOF_TOKEN, "",
				tokens.empty() ? SourceLocation{1, 1, 0, 0} : tokens.back().loc
			};
		}

		Token result = tokens[current]; // 1. Get current token first
		previous = current;

		// 2. Only advance if not already at end
		if (current + 1 < tokens.size()) {
			current++;
			currentToken = tokens[current];
		}
		else {
			current = tokens.size(); // Mark as ended
			currentToken = Token{TokenType::EOF_TOKEN, "", result.loc};
		}

		return result; // Return what was current when we entered
	}

	Parser::Parser(std::vector<Token> tokens, const Flags &flags, std::ostream &errStream)
		: tokens(std::move(tokens)),
		  currentToken(this->tokens.empty() ? Token{TokenType::EOF_TOKEN, "", {1, 1, 0}} : this->tokens[0]),
		  flags(flags), errStream(errStream), errorReporter(std::cout) {
		current = 0;
	}

	bool Parser::isAtEnd() const {
		return current >= tokens.size();
	}

	polymorphic<TypeNode> Parser::parseType() {
		SourceLocation startLoc = currentToken.loc;

		// Handle built-in types (from TokenType)
		if (match({
			TokenType::INT, TokenType::LONG, TokenType::SHORT,
			TokenType::BYTE, TokenType::FLOAT, TokenType::DOUBLE,
			TokenType::STRING, TokenType::NUMBER, TokenType::BIGINT,
			TokenType::BIGNUMBER, TokenType::FREEOBJ, TokenType::BOOL, TokenType::VOID
		})) {
			Token typeToken = advance();

			PrimitiveTypeNode::Type kind;
			if (typeToken.type == TokenType::INT) kind = PrimitiveTypeNode::Type::INT;
			else if (typeToken.type == TokenType::LONG) kind = PrimitiveTypeNode::Type::LONG;
			else if (typeToken.type == TokenType::BOOL) kind = PrimitiveTypeNode::Type::BOOL;
			else if (typeToken.type == TokenType::SHORT) kind = PrimitiveTypeNode::Type::SHORT;
			else if (typeToken.type == TokenType::BYTE) kind = PrimitiveTypeNode::Type::BYTE;
			else if (typeToken.type == TokenType::FLOAT) kind = PrimitiveTypeNode::Type::FLOAT;
			else if (typeToken.type == TokenType::DOUBLE) kind = PrimitiveTypeNode::Type::DOUBLE;
			else if (typeToken.type == TokenType::STRING) kind = PrimitiveTypeNode::Type::STRING;
			else if (typeToken.type == TokenType::NUMBER) kind = PrimitiveTypeNode::Type::NUMBER;
			else if (typeToken.type == TokenType::BIGINT) kind = PrimitiveTypeNode::Type::BIGINT;
			else if (typeToken.type == TokenType::VOID) kind = PrimitiveTypeNode::Type::VOID;
			else if (typeToken.type == TokenType::FREEOBJ) {
				// For freeobj, we'll return a TypeNode with DYNAMIC kind since it's a special case
				return make_polymorphic<TypeNode>(startLoc, TypeNode::Kind::DYNAMIC);
			}
			else kind = PrimitiveTypeNode::Type::BIGNUMBER;

			return make_polymorphic<PrimitiveTypeNode>(startLoc, kind);
		}
		else if (match(TokenType::LBRACKET)) {
			// Array type (e.g., [int] or [MyClass])
			advance(); // Consume '['
			auto elementType = parseType();
			consume(TokenType::RBRACKET, "Expected ']' after array type");
			return make_polymorphic<ArrayTypeNode>(startLoc, std::move(elementType));
		}
		else if (match(TokenType::IDENTIFIER)) {
			// User-defined type (class/struct/type alias) - now with template support
			Token typeToken = advance();
			std::string baseName = typeToken.lexeme;

			//Todo change this
			if (baseName == "Function")
				return make_polymorphic<TypeNode>(
					startLoc,
					TypeNode::Kind::FUNCTION
				);
			//End todo

			// Check for template arguments
			if (peekIsTemplateStart()) {
				consume(TokenType::LESS); // Eat '<'

				std::vector<polymorphic_variant<TypeNode> > templateArgs;
				if (!match(TokenType::GREATER)) {
					do {
						templateArgs.emplace_back(parseType());
					} while (match(TokenType::COMMA) && (advance(), true));
				}

				consume(TokenType::GREATER, "Expected '>' to close template arguments");

				return make_polymorphic<TemplateTypeNode>(
					startLoc,
					baseName,
					std::move(templateArgs)
				);
			}

			// Non-templated case
			return make_polymorphic<NamedTypeNode>(startLoc, baseName);
		}

		throw ParseError(
			currentToken.loc,
			"Expected type name, got " + Lexer::tokenToString(currentToken.type)
		);
	}

	void Parser::synchronize() {
		// 1. Always consume the current problematic token first
		advance();

		// 2. Loop until we find a suitable synchronization point or reach the end.
		while (!isAtEnd()) {
			// --- Strategy 1: Check if the PREVIOUS token ended a structure ---
			// If the token we just consumed was a statement terminator or block end,
			// the current token is likely the start of something new and safe.
			TokenType prevType = previousToken().type; // Get the type of the token consumed *before* current
			if (prevType == TokenType::SEMICOLON || prevType == TokenType::RBRACE) {
				// We've likely just finished a statement or block.
				// The current token should be the start of the next one.
#ifdef PARSER_DEBUG // Optional debug output
				std::cout << "[Sync] Resuming after previous token: " << Lexer::tokenToString(prevType) << std::endl;
#endif
				return;
			}

			// --- Strategy 2: Check if the CURRENT token starts a new major structure ---
			// Look for keywords that reliably begin common declarations or statements.
			switch (currentToken.type) {
				// Major Declaration Starters (High Confidence Recovery Points)
				case TokenType::CLASS:
				case TokenType::STRUCT:
				case TokenType::UNION:
				case TokenType::FUN: // Includes methods and functions
				case TokenType::ACTOR:
				case TokenType::TEMPLATE:
				case TokenType::IMPORT: // Import statements
				case TokenType::PACKAGE: // Package declaration
				case TokenType::EXTERN: // FFI blocks (assuming 'extern' starts it)
				// Statement Starters (Good Confidence Recovery Points)
				case TokenType::IF:
				case TokenType::WHILE:
				case TokenType::FOR:
				case TokenType::DO:
				case TokenType::RETURN:
				//case TokenType::SWITCH:     /
				//case TokenType::MATCH:      /
				//case TokenType::TRY:        /
				case TokenType::UNSAFE:
				case TokenType::SCOPE:
				// Variable Declaration Starters
				case TokenType::LET:
				case TokenType::VAR:
				case TokenType::DYNAMIC:
				// Potential Type Starters (Lower confidence, might be part of expression)
				// Add these cautiously if needed, or rely on keywords above.
				// case TokenType::INT:
				// case TokenType::FLOAT:
				// case TokenType::IDENTIFIER: // Risky - could be function call, variable use, etc.
				// Annotation marker (often precedes a declaration)
				case TokenType::AT:
				// Access Modifiers (likely start a class/struct member)
				case TokenType::PUBLIC:
				case TokenType::PRIVATE:
				case TokenType::PROTECTED:
				case TokenType::PRIVATEW:
				case TokenType::PROTECTEDW:
					// Found a likely synchronization point.
#ifdef PARSER_DEBUG
					std::cout << "[Sync] Resuming before current token: " << Lexer::tokenToString(currentToken.type) <<
							std::endl;
#endif
					return; // Exit synchronize, ready to parse the new structure

				default:
					// This token doesn't look like a good starting point.
					break;
			}

			// 3. If not a synchronization point, consume the current token and continue.
			advance();
		}
	}

	const Token &Parser::previousToken() const {
		if (previous >= tokens.size()) {
			static Token eof{TokenType::EOF_TOKEN, "", {0, 0, 0}};
			return eof;
		}
		return tokens[previous];
	}

	int Parser::getPrecedence(TokenType type) {
		static const std::unordered_map<TokenType, int> precedences = {
			// Assignment
			{TokenType::EQUAL, 1},
			{TokenType::PLUS_EQUALS, 1},
			{TokenType::MINUS_EQUALS, 1},
			{TokenType::STAR_EQUALS, 1},
			{TokenType::SLASH_EQUALS, 1},
			{TokenType::PERCENT_EQUALS, 1},

			// Logical
			{TokenType::OR, 2},
			{TokenType::AND, 3},

			// Equality
			{TokenType::BANG_EQUAL, 4},
			{TokenType::EQUAL_EQUAL, 4},

			// Comparison
			{TokenType::LESS, 5},
			{TokenType::LESS_EQUAL, 5},
			{TokenType::GREATER, 5},
			{TokenType::GREATER_EQUAL, 5},

			// Arithmetic
			{TokenType::PLUS, 6},
			{TokenType::MINUS, 6},
			{TokenType::STAR, 7},
			{TokenType::SLASH, 7},
			{TokenType::PERCENT, 7},

			// Unary operator
			{TokenType::PLUS_PLUS, 9},
			{TokenType::MINUS_MINUS, 9},

		};

		auto it = precedences.find(type);
		return it != precedences.end() ? it->second : 0;
	}

	polymorphic<ProgramNode> Parser::parse() {
		SourceLocation startLoc = currentToken.loc;
		std::vector<polymorphic<ASTNode> > declarations;
		while (!isAtEnd()) {
			pendingAnnotations.clear();
			pendingAnnotations = parseAnnotations();
			try {
				auto annotations = parseAnnotations();
				if (match(TokenType::IMPORT)) {
					declarations.emplace_back(parseImport());
				}
				if (match(TokenType::TEMPLATE)) {
					declarations.emplace_back(parseTemplate());
				}
				else if (match({TokenType::CLASS, TokenType::STRUCT})) {
					declarations.emplace_back(parseObject());
				}
				else if (match(TokenType::UNION)) {
					declarations.emplace_back(parseUnion());
				}
				else if (match(TokenType::FUN)) {
					declarations.emplace_back(parseFunction());
				}
				else if (isBuiltInType(currentToken.type) || currentToken.type == TokenType::IDENTIFIER) {
					// Handle both built-in types and user-defined types
					if (isPotentialMethod()) {
						declarations.emplace_back(parseFunction());
					}
					else {
						// It's a variable declaration
						declarations.emplace_back(parseVarDecl());
					}
				}
				else if (match({TokenType::LET, TokenType::VAR, TokenType::DYNAMIC})) {
					declarations.emplace_back(parseVarDecl());
				}
				else if (match(TokenType::ACTOR)) {
					declarations.emplace_back(parseActorDecl());
				}
				else if (!annotations.empty()) {
					throw ParseError(currentToken.loc,
					                 "Annotations must precede a declaration");
				}
				else {
					// Handle other top-level constructs
					advance();
				}
				if (!declarations.empty()) {
					if (auto annotatable_opt = declarations.back().cast().non_throwing().to<IAnnotatable>()) {
						annotatable_opt->setAnnotations(std::move(pendingAnnotations));
					}
					else if (!pendingAnnotations.empty()) {
						throw ParseError(currentToken.loc,
						                 "Annotations cannot be applied to this declaration type");
					}
				}
			} catch (const ParseError &e) {
				errorReporter.report(e.location, e.format());
				errStream << e.what() << std::endl;
				synchronize();
			}
		}
		auto program = make_polymorphic<ProgramNode>(startLoc, std::move(declarations));

		return program;
	}

	bool Parser::isBuiltInType(TokenType type) {
		static const std::unordered_set<TokenType> builtInTypes = {
			TokenType::INT, TokenType::LONG, TokenType::SHORT, TokenType::BYTE, TokenType::FLOAT, TokenType::DOUBLE,
			TokenType::STRING, TokenType::FREEOBJ, TokenType::BOOL, TokenType::VOID
		};
		return builtInTypes.contains(type);
	}

	polymorphic<NewExprNode> Parser::parseNewExpression() {
		SourceLocation location = consume(TokenType::NEW).loc; // Eat 'new' keyword, nom nom nom
		std::string className = consume(TokenType::IDENTIFIER).lexeme;

		consume(TokenType::LPAREN);
		std::vector<polymorphic<ExprNode> > args;
		if (!match(TokenType::RPAREN)) {
			do {
				args.push_back(parseExpression());
			} while (match(TokenType::COMMA));
			consume(TokenType::RPAREN);
		}

		return make_polymorphic<NewExprNode>(location, className, std::move(args));
	}

	polymorphic<FunctionDeclNode> Parser::parseFunction() {
		SourceLocation loc = currentToken.loc;
		// Handle annotations
		bool isAsync = std::ranges::find_if(pendingAnnotations,
		                                    [](const polymorphic<AnnotationNode> &ann) {
			                                    return ann->name == "Async";
		                                    }) != pendingAnnotations.end();


		// Parse return type (optional)
		polymorphic<TypeNode> returnType;
		if (match(TokenType::FUN)) {
			advance();

			// Only parse return type if followed by type specifier
			if (isBuiltInType(currentToken.type) || currentToken.type == TokenType::IDENTIFIER) {
				// Peek ahead to distinguish:
				// 1) 'fun int foo' -> returnType=int
				// 2) 'fun foo'     -> function name
				if (peek(1).type == TokenType::IDENTIFIER && peek(2).type == TokenType::LPAREN) {
					returnType = parseType();
				}
			}
		}
		// Handle C-style declarations (e.g. "int foo()")
		else if (isBuiltInType(currentToken.type) || currentToken.type == TokenType::IDENTIFIER) {
			returnType = parseType();
		}
		std::string name = consume(TokenType::IDENTIFIER).lexeme;

		// Get both params and structSugar flag
		auto [params, structSugar] = parseParameters();

		if (match(TokenType::ARROW)) {
			advance();
			returnType = parseType();
		}
		auto body = parseBlock();

		return make_polymorphic<FunctionDeclNode>(
			loc,
			std::move(name),
			std::move(params),
			std::move(returnType),
			std::move(body),
			isAsync,
			structSugar,
			std::move(pendingAnnotations)
		);
	}

	polymorphic<BlockNode> Parser::parseBlock() {
		SourceLocation startLoc = currentToken.loc;
		consume(TokenType::LBRACE);

		std::vector<polymorphic<ASTNode> > statements;
		try {
			while (!match(TokenType::RBRACE) && !isAtEnd()) {
				statements.emplace_back(parseStatement());
			}
			consume(TokenType::RBRACE, "Expected '}' after block");
		} catch (const ParseError &) {
			synchronize(); // Your error recovery method
			if (!match(TokenType::RBRACE)) {
				// Insert synthetic '}' if missing
				statements.emplace_back(createErrorNode());
			}
		}

		return make_polymorphic<BlockNode>(startLoc, std::move(statements));
	}

	polymorphic<StmtNode> Parser::parseStatement() {
		SourceLocation loc = currentToken.loc;

		//Maybe ex
		// Declaration statements
		if (match({TokenType::LET, TokenType::VAR, TokenType::DYNAMIC})) {
			return parseVarDecl();
		}

		// Static variable declarations (primitive or class type)
		if (isBuiltInType(currentToken.type) || currentToken.type == TokenType::IDENTIFIER) {
			// Check if this is actually a declaration by looking ahead
			if (peek(1).type == TokenType::IDENTIFIER) {
				return parseVarDecl();
			}
		}

		if (match(TokenType::THIS)) {
			auto expr = parseExpression();
			if (match(TokenType::SEMICOLON)) advance();
			return make_polymorphic<ExprStmtNode>(loc, std::move(expr));
		}

		// Control flow statements
		if (match(TokenType::IF)) return parseIfStmt();
		if (match(TokenType::FOR)) return parseForStmt();
		if (match(TokenType::WHILE)) return parseWhileStmt();
		if (match(TokenType::DO)) return parseDoWhileStmt();
		if (match(TokenType::RETURN)) return parseReturnStmt();

		// Unsafe blocks
		if (match(TokenType::UNSAFE)) {
			advance(); // Consume 'unsafe'
			return parseUnsafeBlock();
		}
		if (match(TokenType::SCOPE)) {
			return parseScopeBlock();
		}
		// Block statements
		if (match(TokenType::LBRACE)) {
			return parseBlock();
		}

		// Expression statements
		if (peekIsExpressionStart()) {
			auto expr = parseExpression();
			// Optional semicolon (Zenith allows brace-optional syntax)
			if (match(TokenType::SEMICOLON)) {
				advance();
			}
			return make_polymorphic<ExprStmtNode>(loc, std::move(expr));
		}

		// Empty statement (just a semicolon)
		if (match(TokenType::SEMICOLON)) {
			advance();
			return make_polymorphic<EmptyStmtNode>(loc);
		}

		// Error recovery
		throw ParseError(currentToken.loc, "Unexpected token in statement: " + currentToken.lexeme);
	}

	bool Parser::peekIsExpressionStart() const {
		switch (currentToken.type) {
			case TokenType::SCOPE:
			case TokenType::IDENTIFIER:
			case TokenType::INTEGER_LIT:
			case TokenType::FLOAT_LIT:
			case TokenType::STRING_LIT:
			case TokenType::LPAREN: // Maybe also arrow lambda
			case TokenType::LBRACE: // For object literals
			case TokenType::NEW: // Constructor calls
			case TokenType::BANG: // Unary operators
			case TokenType::MINUS:
			case TokenType::PLUS:
			case TokenType::THIS:

				return true;
			default:
				return false;
		}
	}

	Token Parser::peek(size_t offset) const {
		size_t idx = current + offset;
		if (idx >= tokens.size()) {
			return Token{
				TokenType::EOF_TOKEN, "",
				tokens.empty() ? SourceLocation{1, 1, 0} : tokens.back().loc
			};
		}
		return tokens[idx];
	}

	polymorphic<IfNode> Parser::parseIfStmt() {
		SourceLocation loc = consume(TokenType::IF).loc;
		consume(TokenType::LPAREN, "Expected '(' after 'if'");
		auto condition = parseExpression();
		consume(TokenType::RPAREN, "Expected ')' after if condition");

		// Parse 'then' branch (enforce braces if required)
		polymorphic<StmtNode> thenBranch;
		try {
			if (flags.bracesRequired && !match(TokenType::LBRACE)) {
				throw ParseError(currentToken.loc, "Expected '{' after 'if'");
			}
			thenBranch = parseStatement();
		} catch (const ParseError &e) {
			errorReporter.report(e.location, "Error in if body " + e.format());
			errStream << "Error in if body: " << e.what() << std::endl;
			synchronize(); // Skip to next statement
			auto errorNode = createErrorNode();
			thenBranch = make_polymorphic<EmptyStmtNode>(errorNode->loc);
		}

		// Parse 'else' branch (also enforce braces if required)
		polymorphic<ASTNode> elseBranch;
		if (match(TokenType::ELSE)) {
			advance();
			try {
				if (flags.bracesRequired) {
					if (!match(TokenType::LBRACE)) {
						throw ParseError(currentToken.loc,
						                 "Expected '{' after 'else' (braces are required)");
					}
					elseBranch = parseBlock();
				}
				else {
					elseBranch = parseStatement();
				}
			} catch (const ParseError &e) {
				errorReporter.report(e.location, "Error in else body " + e.format());
				errStream << "Error in else body: " << e.what() << std::endl;
				synchronize();
				// Create error node or empty node as fallback
				elseBranch = make_polymorphic<EmptyStmtNode>(currentToken.loc); // Simplified
			}
		}

		return make_polymorphic<IfNode>(
			loc,
			std::move(condition),
			std::move(thenBranch),
			std::move(elseBranch)
		);
	}

	polymorphic<ForNode> Parser::parseForStmt() {
		SourceLocation loc = consume(TokenType::FOR).loc;
		consume(TokenType::LPAREN);

		// Parse init/condition/increment (unchanged)
		polymorphic<StmtNode> init;
		if (match(TokenType::SEMICOLON)) {
			advance(); // Empty initializer
		}
		else if (match({TokenType::LET, TokenType::VAR, TokenType::DYNAMIC}) ||
		         isBuiltInType(currentToken.type)) {
			init = parseVarDecl();
		}
		else {
			init = make_polymorphic<ExprStmtNode>(currentToken.loc, parseExpression());
		}
		consume(TokenType::SEMICOLON);

		polymorphic<ExprNode> condition;
		if (!match(TokenType::SEMICOLON)) {
			condition = parseExpression();
		}
		consume(TokenType::SEMICOLON);

		polymorphic<ExprNode> increment;
		if (!match(TokenType::RPAREN)) {
			increment = parseExpression();
		}
		consume(TokenType::RPAREN);

		// Enforce braces if required
		if (flags.bracesRequired && !match(TokenType::LBRACE)) {
			throw ParseError(currentToken.loc,
			                 "Expected '{' after 'for' (braces are required)");
		}

		auto body = parseStatement(); // parseBlock() if braces are required
		return make_polymorphic<ForNode>(loc, std::move(init), std::move(condition),
		                                 std::move(increment), std::move(body));
	}
